--- a/index.html
+++ b/index.html
@@ -17,6 +17,18 @@
             <div class="destination" id="barcelona">
                 <h2>Sao Paolo</h2>
             </div>
+
+            <div class="destination" id="new-zealand">
+                <h2>New Zealand</h2>
+            </div>
+
+            <div class="destination" id="montenegro">
+                <h2>Montenegro</h2>
+            </div>
+
+            <div class="destination" id="monaco">
+                <h2>Monaco</h2>
+            </div>
         </div>
     </div>
 
